# GLiNER.cpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
bindings/: CMakeLists.txt  python.cpp
scripts/: patch_tokenizers_cmake.py
src/: CMakeLists.txt  model.cpp
